--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ artifacts {
 dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    compile group: 'ch.qos.logback.contrib', name: 'logback-jackson', version: '0.1.5'
+    compile group: 'ch.qos.logback.contrib', name: 'logback-json-classic', version: '0.1.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.8.9'
 }
@@ -44,7 +48,7 @@ test {
 
 jar {
     manifest {
-        attributes (
+        attributes(
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                 'Main-Class': 'classes.Main'
         )
