--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id "com.palantir.jacoco-coverage" version "0.4.0"
     id "maven"
     id "com.github.johnrengelman.shadow" version '2.0.2'
+    id 'net.ltgt.apt' version '0.10'
 }
 
 group 'transaction-generator'
@@ -29,12 +30,17 @@ artifacts {
 }
 
 dependencies {
+    apt "org.projectlombok:lombok:1.16.20"
+    compileOnly 'org.projectlombok:lombok:1.16.20'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'ch.qos.logback.contrib', name: 'logback-jackson', version: '0.1.5'
     compile group: 'ch.qos.logback.contrib', name: 'logback-json-classic', version: '0.1.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
+    compile group: 'org.simpleflatmapper', name: 'sfm-csv', version: '3.16.0'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.9.4'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.4'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.8.9'
 }
@@ -50,7 +56,7 @@ jar {
     manifest {
         attributes(
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'classes.Main'
+                'Main-Class': 'classes.launcher.Main'
         )
     }
 }
