--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ plugins {
     id "maven"
     id "com.github.johnrengelman.shadow" version '2.0.2'
     id 'net.ltgt.apt' version '0.10'
+    id "com.palantir.docker" version "0.19.2"
 }
 
 group 'transaction-generator'
